syntax = "proto3";

//protoc -I=protos/ --java_out=src/main/java/ protos/chatproto.proto


//Message that the storage node gets from client.
message SNReceive {
    FileData fileData = 1;
    packetType type = 2;
    bool fileExist = 3;
    bool sendBroadCast = 4;
    repeated string node_files = 5;
    repeated FileData chunk_list = 6;
    bool success = 7;

    enum packetType {
        STORE = 0;
        RETRIEVE = 1;
        SYSTEM = 2;
        BROADCAST = 3;
        PIPELINE = 4;
        CHECKSUM = 5;
        RECOVER = 6;
    }
}



message CordReceive {
    int32 avail_space = 1;
    int32 req_handled = 2;
    packetType type = 3;
    string ip = 4;
    int32 port = 5;

    enum packetType {
        JOIN = 0;
        SYSTEM = 1;
        HEARTBEAT = 2;
    }
}

message CordResponse {
    bool can_join = 1;
    int32 start_range = 2;
    int32 end_range = 3;
    int32 avail_space = 4;
    int32 req_handled = 5;
    repeated NodeInfo new_nodes = 6;
    repeated NodeInfo removed_nodes = 7;
    int32 nodeId = 8;
    packetType type = 9;


    enum packetType {
        JOIN = 0;
        SYSTEM = 1;
        HEARTBEAT = 2;
    }
}



message ClientReceiveData {
    FileData fileData = 1;
    int32 port = 2;
    string ip = 3;
    repeated NodeInfo node_info = 4;
    int32 avail_space = 5;
    repeated string node_files = 6;
    packetType type = 7;


    enum packetType {
        DATA = 0;
        REDIRECT = 1;
    }
}

message FileData {
    bytes data = 1;
    int32 chunk_no = 2;
    int32 num_chunks = 3;
    string filename = 4;
    int32 replicaNum = 5;
}


message NodeInfo{
    int32 id = 1;
    string ip = 3;
    int32 port = 4;
    BInteger position = 5;
    int32 neighbor = 6;
    int32 avail_space = 7;
    int32 tot_request = 8;


}

message BInteger {
    bytes position = 1;
}
